# BangumiHelper

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  deploy.sh  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  migrate.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: auth.py  bangumi.py  downloader.py  invite_codes.py  rss.py  subscription.py  user.py
backend/app/core/: config.py  constants.py  database.py  filter_utils.py  scheduler.py  security.py  utils.py
backend/app/models/: models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/data_sources/: __init__.py  bangumi_moe.py  base.py  dmhy.py  mikan.py
backend/app/services/downloaders/: __init__.py  aria2.py  base.py  qbittorrent.py  transmission.py
backend/migrations/: env.py
backend/migrations/versions/: 001_init.py  002_add_invite_codes.py  003_add_rss_token.py  004_add_subscription_id_to_bangumi_filters.py  005_add_global_filter.py  006_add_user_rss_token.py  007_remove_current_episode.py
documents/: deployment.md  development.md  operations.md
frontend/: .dockerignore  Caddyfile  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: index.ts
frontend/src/components/: FilterDialog.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/styles/: main.scss
frontend/src/views/: BangumiDetail.vue  Calendar.vue  Downloaders.vue  Login.vue  Register.vue  Search.vue  Settings.vue  Subscriptions.vue
