[project]
name = "bangumi-helper"
version = "1.0.0"
description = "A modern bangumi tracking and downloading assistant"
authors = [{ name = "BangumiHelper Team" }]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.40",
    "aiosqlite==0.21.0",
    "pydantic==2.11.3",
    "pydantic-settings==2.8.1",
    "email-validator==2.3.0",
    "python-jose[cryptography]==3.4.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "beautifulsoup4==4.13.4",
    "lxml==5.3.2",
    "feedparser==6.0.11",
    "feedgen==1.0.0",
    "qbittorrent-api==2025.4.0",
    "transmission-rpc==7.0.11",
    "loguru==0.7.3",
    "alembic==1.15.2",
    "apscheduler==3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
    "httpx==0.28.1",
    "ruff==0.11.6",
    "mypy==1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
