[project]
name = "bangumi-helper"
version = "1.0.0"
description = "A modern bangumi tracking and downloading assistant"
authors = [{ name = "BangumiHelper Team" }]
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "sqlalchemy==2.0.49",
    "aiosqlite==0.22.1",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "email-validator==2.3.0",
    "python-jose[cryptography]==3.5.0",
    "bcrypt==5.0.0",
    "python-multipart==0.0.26",
    "aiohttp==3.12.13",
    "beautifulsoup4==4.14.3",
    "lxml==6.1.0",
    "feedparser==6.0.12",
    "feedgenerator==2.2.1",
    "qbittorrent-api==2025.11.1",
    "transmission-rpc==7.0.11",
    "loguru==0.7.3",
    "alembic==1.18.4",
    "apscheduler==3.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.12",
    "mypy==1.20.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py314"
exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
